--- a/style.sass
+++ b/style.sass
@@ -1,13 +1,10 @@
 $bgColor: #EEEEEE
-$breakpoints: (phone: 640px, 
-               tablet: 768px, 
-               desktop: 1024px)
+$breakpoints: (phone: 640px, tablet: 768px, desktop: 1024px)
 
 body
     padding: 0
     margin: 0
-    font-family: "Kanit", sans-serif;
-    
+    font-family: "Kanit", sans-serif
 
     @media (max-width: 768px)
         nav
@@ -128,8 +125,8 @@ body
                 cursor: pointer
                 transition: 0.4s box-shadow
                 &:hover
-                    -webkit-box-shadow: 3px 3px 15px 3px rgba(0,0,0,0.5); 
-                    box-shadow: 3px 3px 15px 1px rgba(0,0,0,0.5);
+                    -webkit-box-shadow: 3px 3px 15px 3px rgba(0,0,0,0.5)
+                    box-shadow: 3px 3px 15px 1px rgba(0,0,0,0.5)
 
                 .rank-image-container
                     height: 120px
@@ -194,6 +191,45 @@ body
                             p
                                 margin: 0
                                 font-size: 20px
+
+        .clip-headers-container
+            text-align: center
+            margin-top: 80px
+
+            h2
+                font-size: 24px
+                margin: 8px 0 4px 0
+            
+            h3
+                font-size: 18px
+                margin: 4px 0
+
+        .clips-container
+            display: flex
+            flex-wrap: wrap
+            justify-content: center
+            max-width: 2000px
+            margin: 12px auto
+
+            .clip-container
+                background-color: black
+
+                @media (max-width: 768px)
+                    width: 300px
+                    margin: 12px
+
+                    .clip-video
+                        width: 300px
+                        height: auto
+
+                @media (min-width: 768px)
+                    width: 600px
+                    margin: 24px
+
+                    .clip-video
+                        width: 600px
+                        height: auto
+
     
     footer
         margin: 16px
