--- a/style.sass
+++ b/style.sass
@@ -121,9 +121,8 @@ body
                 text-align: center
 
         .rank-window
-            background-color: $primaryColor
+            background-color: white
             padding: 32px
-            display: none
 
             h2
                 max-width: 960px
@@ -131,7 +130,7 @@ body
                 color: black
 
             .rank-container
-                background-color: $primaryColor
+                background-color: white
                 padding: 0px
                 border-radius: 16px
                 margin: 32px auto
@@ -162,12 +161,13 @@ body
                     .rank-game-container
                         display: grid
                         grid-template-columns: auto
-                        width: 200px
+                        width: 80px
 
                         .rank-date-txt
-                            font-size: 24px
+                            font-size: 20px
                             font-weight: bold
-                            margin: 0
+                            line-height: 90%
+                            margin: 0 0 8px 0
 
                         .rank-map-container
                             display: grid
@@ -197,14 +197,23 @@ body
                         display: flex
                         justify-content: space-between
 
+                        .rank-stat-kda
+                            text-align: right
+
                         .rank-stat-container
                             display: grid
                             grid-template-columns: auto
-                            margin: 0 16px
+                            margin: 0 8px 0 0
+                            width: 80px
+                            text-align: right
 
-                            p
+                            .rank-stat-txt-header
                                 margin: 0
-                                font-size: 20px
+                                font-size: 18px
+
+                            .rank-stat-txt-info
+                                margin: 0
+                                font-size: 24px
 
         .clip-headers-container
             text-align: center
@@ -322,7 +331,7 @@ body
     height: calc(100% + 16px)
     width: calc(100% + 16px)
     margin: -8px 0 0 -8px
-    opacity: 0.5
+    opacity: 0.33
 
 .ascent-bk
     background-image: url("https://media.valorant-api.com/maps/7eaecc1b-4337-bbf6-6ab9-04b8f06b3319/listviewicon.png")
