--- a/style.sass
+++ b/style.sass
@@ -57,6 +57,10 @@ body
                     margin-top: 6px
                     color: black
 
+                    a
+                        color: black
+                        text-decoration: none
+
     @media (min-width: 768px)
         nav
             position: fixed
@@ -93,6 +97,10 @@ body
                     margin-top: 12px
                     color: black
 
+                    a
+                        color: black
+                        text-decoration: none
+
     main
         padding: 32px 0 48px 0
 
@@ -100,10 +108,10 @@ body
             width: 100%
             max-height: 800px
             overflow: hidden
+            background-color: #ccc
             #video-highlight
                 width: 100%
                 height: auto
-                -webkit-transform-style: preserve-3d
 
         .header-window
             background-color: white
@@ -421,10 +429,31 @@ body
 
     
     footer
-        margin: 16px
         font-size: 12px
         font-weight: light
-        margin: 8px auto
+        margin: 8px auto 0 auto
+        background-color: $primaryColor
+
+        .footer-links
+            display: grid
+            padding: 64px 32px
+            @media (min-width: 768px)
+                font-size: 18px
+                grid-template-columns: 200px 200px 200px
+                justify-content: space-around
+            @media (max-width: 768px)
+                font-size: 16px
+                grid-template-columns: auto
+
+        a
+            color: black
+            text-decoration: none
+            &:hover
+                color: white
+
+        .footer-bottom
+            padding: 4px 16px 4px 4px
+            text-align: right
 
 .map-bk
     background-position: center
